--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
     tools:context="dhcc.cn.com.fix_phone.ui.activity.MainActivity">
 
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
+    <FrameLayout
+        android:id="@+id/frameLayout_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
