修复bug，完成首页功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,13 @@
     <FrameLayout
         android:id="@+id/frameLayout_main"
         android:layout_width="match_parent"
+        android:layout_marginBottom="56dp"
         android:layout_height="match_parent"/>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_gravity="bottom"
         app:tabGravity="fill"
         app:tabIndicatorHeight="0dp"
