--- a/app/src/main/res/layout/item_circle_title.xml
+++ b/app/src/main/res/layout/item_circle_title.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:layout_height="60dp">
 
     <TextView
+        android:layout_marginTop="15dp"
         android:id="@+id/textView_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"/>
-</LinearLayout>
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"
+        android:gravity="center_vertical"
+        android:text="TextView"
+        android:textColor="@color/text_color"
+        android:textSize="20sp"/>
+
+    <TextView
+        android:layout_below="@+id/textView_title"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"
+        android:background="@drawable/shape_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
+
+</RelativeLayout>
