--- a/app/src/main/res/layout/item_circle_title.xml
+++ b/app/src/main/res/layout/item_circle_title.xml
@@ -6,7 +6,7 @@
     <TextView
         android:layout_marginTop="15dp"
         android:id="@+id/textView_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="18dp"
         android:layout_marginRight="18dp"
@@ -14,6 +14,12 @@
         android:text="TextView"
         android:textColor="@color/text_color"
         android:textSize="20sp"/>
+
+    <ImageView
+        android:id="@+id/imageView_expend"
+        android:layout_width="wrap_content"
+        android:layout_alignRight="@+id/textView_title"
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:layout_below="@+id/textView_title"
