--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Mine_TextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:background">@drawable/case_bg</item>
+        <item name="android:drawableRight">@drawable/btn_arrow_right</item>
+        <item name="android:drawablePadding">@dimen/public_15dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#6b6b6b</item>
+        <item name="android:paddingLeft">@dimen/public_15dp</item>
+        <item name="android:paddingRight">@dimen/public_15dp</item>
+    </style>
 </resources>
