--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -11,10 +11,12 @@
     <dimen name="public_70dp">70dp</dimen>
     <dimen name="public_80dp">80dp</dimen>
     <dimen name="public_120dp">120dp</dimen>
+    <dimen name="public_150dp">150dp</dimen>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="gudieview_width">6dp</dimen>
     <dimen name="gudieview_heigh">6dp</dimen>
+
 </resources>
