--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -31,8 +31,7 @@
                     android:layout_centerVertical="true"
                     android:text="公司名称"
                     android:textColor="@color/app_text_color_black"
-                    android:textSize="16sp"
-                    />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/info_company_name_tv"
