--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -31,13 +32,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <ImageView
+                    <dhcc.cn.com.fix_phone.ui.widget.RoundImageView
                         android:id="@+id/user_icon"
                         android:layout_width="@dimen/public_80dp"
                         android:layout_height="@dimen/public_80dp"
                         android:layout_centerInParent="true"
                         android:layout_alignParentLeft="true"
-                        android:src="@drawable/user_default_icon"/>
+                        android:src="@drawable/user_default_icon"
+                        app:borderRadius="5dp"
+                        app:type="round"/>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -89,7 +92,7 @@
             <TextView
                 android:id="@+id/mine_house"
                 style="@style/Mine_TextView"
-                android:drawableLeft="@drawable/tabbar_circle_select"
+                android:drawableLeft="@drawable/mine_collect"
                 android:text="个人收藏"
                 android:gravity="center|left"/>
             <View
@@ -100,7 +103,7 @@
             <TextView
                 android:id="@+id/mine_suggest"
                 style="@style/Mine_TextView"
-                android:drawableLeft="@drawable/tabbar_circle_select"
+                android:drawableLeft="@drawable/mine_suggest"
                 android:text="投诉建议"
                 android:gravity="center|left"/>
             <View
@@ -111,7 +114,7 @@
             <TextView
                 android:id="@+id/mine_vip"
                 style="@style/Mine_TextView"
-                android:drawableLeft="@drawable/tabbar_circle_select"
+                android:drawableLeft="@drawable/mine_vip"
                 android:text="付费会员"
                 android:gravity="center|left"/>
             <View
@@ -122,7 +125,7 @@
             <TextView
                 android:id="@+id/mine_advert"
                 style="@style/Mine_TextView"
-                android:drawableLeft="@drawable/tabbar_circle_select"
+                android:drawableLeft="@drawable/mine_setting"
                 android:text="店铺广告"
                 android:gravity="center|left"
                 android:layout_marginTop="@dimen/public_15dp"/>
@@ -134,7 +137,7 @@
             <TextView
                 android:id="@+id/mine_produce"
                 style="@style/Mine_TextView"
-                android:drawableLeft="@drawable/tabbar_circle_select"
+                android:drawableLeft="@drawable/mine_setting"
                 android:text="店铺产品"
                 android:gravity="center|left"/>
             <View
@@ -145,7 +148,7 @@
             <TextView
                 android:id="@+id/mine_clear"
                 style="@style/Mine_TextView"
-                android:drawableLeft="@drawable/tabbar_circle_select"
+                android:drawableLeft="@drawable/mine_clean"
                 android:text="清空缓存"
                 android:gravity="center|left"
                 android:layout_marginTop="@dimen/public_15dp"/>
@@ -157,7 +160,7 @@
             <TextView
                 android:id="@+id/mine_app"
                 style="@style/Mine_TextView"
-                android:drawableLeft="@drawable/tabbar_circle_select"
+                android:drawableLeft="@drawable/explain"
                 android:text="APP简介"
                 android:gravity="center|left"
                 android:layout_marginTop="@dimen/public_15dp"/>
