--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,12 +9,14 @@
         android:layout_height="90dp"
         android:layout_centerInParent="true">
 
-        <ImageView
+        <dhcc.cn.com.fix_phone.ui.widget.RoundImageView
             android:id="@+id/iv_image"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            app:borderRadius="5dp"
+            app:type="round"/>
     </RelativeLayout>
 </RelativeLayout>
