--- a/app/src/main/res/layout/activity_main_circle.xml
+++ b/app/src/main/res/layout/activity_main_circle.xml
@@ -1,37 +1,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/color_aeaeae"
-    android:fitsSystemWindows="true"
-    android:orientation="vertical">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/color_aeaeae"
+              android:fitsSystemWindows="true"
+              android:orientation="vertical">
 
-    <include layout="@layout/layout_main_titlebar"/>
+    <include layout="@layout/toolbar"/>
 
     <RelativeLayout
         android:id="@+id/bodyLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <com.malinskiy.superrecyclerview.SuperRecyclerView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/recyclerView"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:mainLayoutId="@layout/layout_recyclerview_verticalscroll"
             app:layout_moreProgress="@layout/view_more_progress"
+            app:mainLayoutId="@layout/layout_recyclerview_verticalscroll"
             app:recyclerClipToPadding="true"
-            app:scrollbarStyle="outsideOverlay" />
+            app:scrollbarStyle="outsideOverlay"/>
 
         <include
+            layout="@layout/layout_editview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            layout="@layout/layout_editview"/>
+            android:layout_alignParentBottom="true"/>
 
         <com.mikhaellopez.circularprogressbar.CircularProgressBar
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/video_progress"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
@@ -39,7 +39,7 @@
             app:cpb_background_progressbar_color="@color/white"
             app:cpb_background_progressbar_width="3dp"
             app:cpb_progressbar_color="@color/colorAccent"
-            app:cpb_progressbar_width="3dp" />
+            app:cpb_progressbar_width="3dp"/>
 
     </RelativeLayout>
 
