--- a/app/src/main/res/layout/social_sns_popupwindow.xml
+++ b/app/src/main/res/layout/social_sns_popupwindow.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
+    android:layout_width="150dp"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:background="@drawable/demo_social_sns_bg"
     android:orientation="horizontal" >
     
     <TextView 
-        android:id="@+id/digBtn"
+        android:id="@+id/collect"
         android:layout_width="0dp"
     	android:layout_height="match_parent"
     	android:layout_weight="1"
-    	android:text="赞"
+    	android:text="收藏"
+		android:layout_marginRight="5sp"
+		android:layout_marginLeft="5sp"
     	android:gravity="center"
     	android:textColor="#d2d2d2"/>
     <View 
@@ -19,14 +21,35 @@
     	android:layout_height="match_parent"
     	android:layout_marginBottom="2dp"
         android:layout_marginTop="2dp"
+		android:layout_marginRight="5sp"
+		android:layout_marginLeft="5sp"
         android:background="#707070"
         />
     <TextView 
-        android:id="@+id/commentBtn"
+        android:id="@+id/complain"
         android:layout_width="0dp"
     	android:layout_height="match_parent"
     	android:layout_weight="1"
-    	android:text="评论"
+    	android:text="投诉"
     	android:gravity="center"
     	android:textColor="#d2d2d2"/>
+
+	<View
+		android:layout_width="1dp"
+		android:layout_height="match_parent"
+		android:layout_marginBottom="2dp"
+		android:layout_marginTop="2dp"
+		android:layout_marginRight="5sp"
+		android:layout_marginLeft="5sp"
+		android:background="#707070"
+		/>
+
+	<TextView
+		android:id="@+id/share"
+		android:layout_width="0dp"
+		android:layout_height="match_parent"
+		android:layout_weight="1"
+		android:text="分享"
+		android:gravity="center"
+		android:textColor="#d2d2d2"/>
 </LinearLayout>
