--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
 
     <color name="text_color">@android:color/darker_gray</color>
     <color name="text_color_selector">#6464FD</color>
-    <color name="text_color_gray">#D9D9D9</color>
+    <color name="text_color_gray">#B9B9B9</color>
     <color name="text_color_white">#FFFFFF</color>
 
     <color name="app_transparent">#00000000</color>
