--- a/app/src/main/res/layout/adapter_circle_item.xml
+++ b/app/src/main/res/layout/adapter_circle_item.xml
@@ -56,19 +56,18 @@
                     android:id="@+id/communication"
                     android:layout_width="0dp"
                     android:layout_height="20dp"
-                    android:layout_weight="2">
+                    android:layout_weight="3">
 
                     <ImageView
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
+                        android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:src="@drawable/button_talkicon"/>
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:gravity="center"
+                        android:gravity="center|right"
                         android:text="沟通"
                         android:textColor="@color/de_title_bg"
                         android:textSize="14sp"/>
