--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -18,19 +18,19 @@
             android:id="@+id/old_pass_clock_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/login_registration_phone"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:src="@drawable/login_registration_phone" />
 
         <EditText
             android:id="@+id/phone_num_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/app_text_color_black"
-            android:textSize="16sp"
             android:layout_toRightOf="@id/old_pass_clock_iv"
+            android:hint="请输入手机号"
             android:paddingRight="@dimen/public_30dp"
             android:singleLine="true"
-            android:hint="请输入手机号"/>
+            android:textColor="@color/app_text_color_black"
+            android:textSize="16sp" />
 
     </RelativeLayout>
 
