--- a/app/src/main/res/layout/activity_business.xml
+++ b/app/src/main/res/layout/activity_business.xml
@@ -1,38 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
-                                       xmlns:android="http://schemas.android.com/apk/res/android"
-                                       xmlns:app="http://schemas.android.com/apk/res-auto"
-                                       xmlns:tools="http://schemas.android.com/tools"
-                                       android:layout_width="match_parent"
-                                       android:layout_height="56dp"
-                                       android:background="@color/white"
-                                       app:navigationIcon="@drawable/back_icon">
-
-        <TextView
-            android:id="@+id/toolbar_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            tools:text="title"/>
-
-
-        <ImageView
-            android:id="@+id/imageView_communication"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginRight="15dp"
-            android:layout_gravity="right|center_vertical"
-            android:src="@drawable/button_talkicon"/>
-
-
-    </android.support.v7.widget.Toolbar>
+    <include layout="@layout/business_tool"/>
 
     <android.support.v4.widget.NestedScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -44,7 +17,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:divider="@drawable/shape_line_magin"
+            android:orientation="vertical"
+            android:showDividers="end">
 
             <ImageView
                 android:id="@+id/imageview_head"
@@ -52,12 +27,13 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/public_10dp"
+                android:scaleType="fitXY"
                 android:src="@drawable/back_icon"/>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/public_20dp">
+                android:layout_marginTop="12dp">
 
                 <TextView
                     android:id="@+id/textView_product"
@@ -67,7 +43,7 @@
                     android:layout_marginLeft="40dp"
                     android:text="供应产品"
                     android:textColor="@color/text_color"
-                    android:textSize="24sp"/>
+                    android:textSize="20sp"/>
 
                 <TextView
                     android:id="@+id/textView_phone"
@@ -77,7 +53,7 @@
                     android:layout_marginRight="40dp"
                     android:text="联系方式"
                     android:textColor="@color/text_color"
-                    android:textSize="24sp"/>
+                    android:textSize="20sp"/>
 
             </RelativeLayout>
 
@@ -85,55 +61,32 @@
                 android:id="@+id/banner"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:layout_margin="20dp"/>
+                android:layout_margin="12dp"
+                app:banner_default_image="@drawable/no_ad"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/public_20dp"
                 android:text="公司简介"
-                android:textColor="@color/text_color"
-                android:textSize="24sp"/>
+                android:textColor="@color/text_black_color"
+                android:textSize="20sp"/>
 
             <TextView
                 android:id="@+id/textView_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="24dp"
+                android:layout_marginLeft="27dp"
+                android:layout_marginRight="27dp"
                 android:layout_marginTop="5dp"
-                android:text="公司简介"
+                android:minLines="1"
                 android:textColor="@color/text_color"
-                android:textSize="18sp"/>
+                android:textSize="18sp"
+                tools:text="公司简介"/>
 
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_alignParentBottom="true">
-
-        <TextView
-            android:id="@+id/textView_home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="40dp"
-            android:text="首页"
-            android:textColor="@color/text_color"
-            android:textSize="24sp"/>
-
-        <TextView
-            android:id="@+id/textView_circle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="40dp"
-            android:text="生意圈"
-            android:textColor="@color/text_color"
-            android:textSize="24sp"/>
-
-    </RelativeLayout>
+    <include layout="@layout/business_bottom"/>
 </RelativeLayout>
