--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -7,12 +7,23 @@
 
     <include layout="@layout/business_tool"/>
 
+    <TextView
+        android:id="@+id/textView_title"
+        android:layout_width="match_parent"
+        android:layout_height="24dp"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginLeft="@dimen/public_10dp"
+        android:gravity="left|center_vertical"
+        android:text="店铺产品"
+        android:textColor="@color/text_black_color"
+        android:textSize="14sp"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/relativeLayout"
-        android:layout_below="@+id/toolbar"/>
+        android:layout_below="@+id/textView_title"/>
 
     <include layout="@layout/business_bottom"/>
 
