--- a/app/src/main/res/layout/activity_main_circle.xml
+++ b/app/src/main/res/layout/activity_main_circle.xml
@@ -6,7 +6,19 @@
               android:fitsSystemWindows="true"
               android:orientation="vertical">
 
-    <include layout="@layout/toolbar"/>
+    <FrameLayout
+        android:id="@+id/toolbar_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <include layout="@layout/toolbar"/>
+
+        <com.miguelcatalan.materialsearchview.MaterialSearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </FrameLayout>
+
 
     <RelativeLayout
         android:id="@+id/bodyLayout"
@@ -45,6 +57,15 @@
             app:cpb_background_progressbar_width="3dp"
             app:cpb_progressbar_color="@color/colorAccent"
             app:cpb_progressbar_width="3dp"/>
+
+        <TextView
+            android:id="@+id/textView_number"
+            android:textColor="@color/text_black_color"
+            android:text="暂无数据"
+            android:visibility="gone"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
     </RelativeLayout>
 
