--- a/app/src/main/res/layout/item_image_check.xml
+++ b/app/src/main/res/layout/item_image_check.xml
@@ -19,12 +19,13 @@
 
     <ImageView
         android:id="@+id/imageView_delete"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="3dp"
+        android:layout_marginTop="3dp"
         android:padding="5dp"
+        android:visibility="gone"
         app:layout_constraintRight_toRightOf="@+id/imageView_icon"
         app:layout_constraintTop_toTopOf="@+id/imageView_icon"
-        app:srcCompat="@android:drawable/ic_delete"
-        android:layout_marginTop="3dp"
-        android:layout_marginRight="3dp"/>
+        app:srcCompat="@drawable/button_delete"/>
 </android.support.constraint.ConstraintLayout>
