--- a/app/src/main/res/layout/activity_my_product.xml
+++ b/app/src/main/res/layout/activity_my_product.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <include layout="@layout/business_tool"/>
+    <include layout="@layout/mine_tool"/>
 
     <TextView
         android:id="@+id/textView_title"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="24dp"
         android:layout_below="@+id/toolbar"
         android:layout_marginLeft="@dimen/public_10dp"
         android:gravity="left|center_vertical"
-        android:text="上传广告图片，为你的店铺打个免费的广告吧！"
+        android:text="店铺产品"
         android:textColor="@color/text_black_color"
-        android:textSize="16sp"/>
+        android:textSize="14sp"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/relativeLayout"
-        android:layout_below="@+id/textView_title"
-        android:background="@color/white"/>
+        android:layout_below="@+id/textView_title"/>
+
+    <include layout="@layout/business_bottom"/>
 
 </RelativeLayout>
