Im 消息添加 try catch

--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -24,4 +24,6 @@
         android:layout_below="@+id/textView_title"
         android:background="@color/white"/>
 
+    <include layout="@layout/business_bottom"/>
+
 </RelativeLayout>
