--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -8,5 +8,6 @@
         android:id="@+id/imageView_icon"
         android:layout_width="wrap_content"
         android:layout_height="120dp"
+        android:src="@drawable/add_camera"
         android:scaleType="fitXY"/>
 </LinearLayout>
