--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -23,7 +23,7 @@
             android:layout_marginRight="14dp"
             android:drawableLeft="@drawable/sealtalk_search"
             android:drawablePadding="6dp"
-            android:hint="手机号"
+            android:hint="输入手机号/店铺名称"
             android:inputType="phone"
             android:maxLength="11"
             android:maxLines="1"/>
