--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -8,25 +8,25 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/activity_gray_bg">
+            android:background="@color/activity_gray_bg"
+            android:orientation="vertical">
 
             <RelativeLayout
                 android:id="@+id/mine_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#037EFF"
-                android:paddingTop="@dimen/public_70dp"
+                android:paddingBottom="@dimen/public_10dp"
                 android:paddingLeft="@dimen/public_15dp"
                 android:paddingRight="@dimen/public_15dp"
-                android:paddingBottom="@dimen/public_10dp">
+                android:paddingTop="@dimen/public_70dp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -36,8 +36,8 @@
                         android:id="@+id/user_icon"
                         android:layout_width="@dimen/public_80dp"
                         android:layout_height="@dimen/public_80dp"
-                        android:layout_centerInParent="true"
                         android:layout_alignParentLeft="true"
+                        android:layout_centerInParent="true"
                         android:src="@drawable/user_default_icon"
                         app:borderRadius="5dp"
                         app:type="round"/>
@@ -45,10 +45,10 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
                         android:layout_centerInParent="true"
+                        android:layout_marginLeft="@dimen/public_10dp"
                         android:layout_toRightOf="@id/user_icon"
-                        android:layout_marginLeft="@dimen/public_10dp">
+                        android:orientation="vertical">
 
                         <TextView
                             android:id="@+id/user_name"
@@ -61,16 +61,16 @@
                             android:id="@+id/user_mobile"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dp_4"
                             android:textColor="#FFFFFF"
-                            android:textSize="14sp"
-                            android:layout_marginTop="@dimen/dp_4"/>
+                            android:textSize="14sp"/>
                     </LinearLayout>
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
                         android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
                         android:src="@drawable/button_right_arrow"/>
                 </RelativeLayout>
             </RelativeLayout>
@@ -78,10 +78,11 @@
             <TextView
                 android:id="@+id/mine_circle"
                 style="@style/Mine_TextView"
+                android:layout_marginTop="@dimen/public_15dp"
                 android:drawableLeft="@drawable/tabbar_circle_select"
-                android:text="我的圈子"
                 android:gravity="center|left"
-                android:layout_marginTop="@dimen/public_15dp"/>
+                android:text="我的圈子"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -91,8 +92,9 @@
                 android:id="@+id/mine_house"
                 style="@style/Mine_TextView"
                 android:drawableLeft="@drawable/mine_collect"
-                android:text="个人收藏"
-                android:gravity="center|left"/>
+                android:gravity="center|left"
+                android:text="个人收藏"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -102,8 +104,9 @@
                 android:id="@+id/mine_suggest"
                 style="@style/Mine_TextView"
                 android:drawableLeft="@drawable/mine_suggest"
-                android:text="投诉建议"
-                android:gravity="center|left"/>
+                android:gravity="center|left"
+                android:text="投诉建议"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -113,8 +116,10 @@
                 android:id="@+id/mine_vip"
                 style="@style/Mine_TextView"
                 android:drawableLeft="@drawable/mine_vip"
+                android:gravity="center|left"
                 android:text="付费会员"
-                android:gravity="center|left"/>
+                android:visibility="gone"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -123,10 +128,11 @@
             <TextView
                 android:id="@+id/mine_advert"
                 style="@style/Mine_TextView"
+                android:layout_marginTop="@dimen/public_15dp"
                 android:drawableLeft="@drawable/mine_setting"
-                android:text="店铺广告"
                 android:gravity="center|left"
-                android:layout_marginTop="@dimen/public_15dp"/>
+                android:text="店铺广告"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -136,8 +142,9 @@
                 android:id="@+id/mine_produce"
                 style="@style/Mine_TextView"
                 android:drawableLeft="@drawable/mine_setting"
-                android:text="店铺产品"
-                android:gravity="center|left"/>
+                android:gravity="center|left"
+                android:text="店铺产品"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -146,10 +153,11 @@
             <TextView
                 android:id="@+id/mine_clear"
                 style="@style/Mine_TextView"
+                android:layout_marginTop="@dimen/public_15dp"
                 android:drawableLeft="@drawable/mine_clean"
-                android:text="清空缓存"
                 android:gravity="center|left"
-                android:layout_marginTop="@dimen/public_15dp"/>
+                android:text="清空缓存"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -158,10 +166,11 @@
             <TextView
                 android:id="@+id/mine_app"
                 style="@style/Mine_TextView"
+                android:layout_marginTop="@dimen/public_15dp"
                 android:drawableLeft="@drawable/explain"
-                android:text="APP简介"
                 android:gravity="center|left"
-                android:layout_marginTop="@dimen/public_15dp"/>
+                android:text="APP简介"/>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -170,8 +179,8 @@
     </ScrollView>
 
     <include
+        layout="@layout/layout_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/public_50dp"
-        android:layout_alignParentTop="true"
-        layout="@layout/layout_title"/>
+        android:layout_alignParentTop="true"/>
 </RelativeLayout>
